--- a/L2/Labsetup/code/Makefile
+++ b/L2/Labsetup/code/Makefile
@@ -1,4 +1,4 @@
-FLAGS    = -z execstack -fno-stack-protector
+FLAGS    = -z execstack -fno-stack-protector 
 FLAGS_32 = -m32
 TARGET   = stack-L1 stack-L2 stack-L3 stack-L4 stack-L1-dbg stack-L2-dbg stack-L3-dbg stack-L4-dbg
 
@@ -11,12 +11,13 @@ all: $(TARGET)
 
 stack-L1: stack.c
 	gcc -DBUF_SIZE=$(L1) $(FLAGS) $(FLAGS_32) -o $@ stack.c
-	gcc -DBUF_SIZE=$(L1) $(FLAGS) $(FLAGS_32) -g -o $@-dbg stack.c
+# 	gcc -DBUF_SIZE=$(L1) $(FLAGS_32) -D_FORTIFY_SOURCE=0 -o $@ stack.c
+	gcc -DBUF_SIZE=$(L1) $(FLAGS) $(FLAGS_32) -D_FORTIFY_SOURCE=0 -g -o $@-dbg stack.c
 	sudo chown root $@ && sudo chmod 4755 $@
 
 stack-L2: stack.c
-	gcc -DBUF_SIZE=$(L2) $(FLAGS) $(FLAGS_32) -o $@ stack.c
-	gcc -DBUF_SIZE=$(L2) $(FLAGS) $(FLAGS_32) -g -o $@-dbg stack.c
+	gcc -DBUF_SIZE=$(L2) $(FLAGS) $(FLAGS_32) -D_FORTIFY_SOURCE=0 -o $@ stack.c
+	gcc -DBUF_SIZE=$(L2) $(FLAGS) $(FLAGS_32) -D_FORTIFY_SOURCE=0 -g -o $@-dbg stack.c
 	sudo chown root $@ && sudo chmod 4755 $@
 
 stack-L3: stack.c
